--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<quizzy-front-nx-welcome></quizzy-front-nx-welcome>
+<div class="main">
+  <qzy-header></qzy-header>
+</div>
 <router-outlet></router-outlet>
