--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,5 +22,18 @@
           <mat-icon [matTooltip]="'header.statusTooltip.pending' | translate" class="header__status header__status--unknown">pending</mat-icon>
       }
     </div>
+    @if(isLoggedIn$ | async) {
+      <div class="header__user">
+        <mat-icon>user</mat-icon>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)="logout()">Logout</button>
+        </mat-menu>
+        @if (userDetails$ | async; as user) {
+          {{user.username}}
+          } @else {
+          <div [matTooltip]="'header.userMissing' | translate"> ??? </div>
+          }
+      </div>
+    }
   </mat-toolbar>
 </header>
