feat: add join component
Not functional yet (we cannot create quiz, so we obviously cannot join)

--- a/src/app/pages/welcome/welcome-page.component.html
+++ b/src/app/pages/welcome/welcome-page.component.html
@@ -1,1 +1,8 @@
-<p>welcome-page works!</p>
+<div class="welcome-page">
+  <h1>{{ 'welcomePage.title' | translate }}</h1>
+  <div class="welcome__description">
+    {{ 'welcomePage.description' | translate }}
+  </div>
+
+  <qzy-join></qzy-join>
+</div>
