--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,8 @@
 }
 
 :root {
+
+  --color-primary : #3f51b5;
   --color-paper-lighter: #f7f4e3;
   --color-paper: #f2eecb;
   --color-paper-darker: #e6e1b3;
