--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@
 
   --color-text: #111;
   --color-text-darker: #000;
+  --color-text-secondary : white;
 
   --color-error: #9a1d1d;
   --color-error-background: #ffb2b2;
