--- a/src/app/pages/welcome/components/join/join.component.html
+++ b/src/app/pages/welcome/components/join/join.component.html
@@ -2,7 +2,7 @@
   <h2>{{'welcomePage.join.title' | translate}}</h2>
   <form (ngSubmit)="join()">
     <mat-form-field class="welcome__field">
-      <input matInput  id="joinCode" placeholder="{{'welcomePage.join.placeholder' | translate}}" [(ngModel)]="joinCode">
+      <input matInput name="joinCode" id="joinCode" placeholder="{{'welcomePage.join.placeholder' | translate}}" [(ngModel)]="joinCode">
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit">{{'welcomePage.join.button' | translate}}</button>
   </form>
