--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,14 @@ body {
   color: var(--color-error);
   font-size: 1.2rem;
 }
+
+.alert {
+  font-size: 1.6rem;
+  padding: 2rem 4rem;
+  margin: 2rem 4rem;
+  text-align: center;
+  color: var(--color-error);
+  border: 1px solid currentColor;
+  border-radius: .5rem;
+  background-color: var(--color-error-background);
+}
