--- a/src/app/pages/quiz-edit/components/quiz-form-question/quiz-form-question.component.scss
+++ b/src/app/pages/quiz-edit/components/quiz-form-question/quiz-form-question.component.scss
@@ -9,3 +9,22 @@
 .question__title {
   width: 70vw;
 }
+
+.question__answer {
+  display:flex;
+  align-items: center;
+
+  &-icon {
+    padding: 2rem;
+    font-weight: bolder;
+
+    & > * {
+      padding: .5rem;
+    }
+
+    &--correct {
+      background-color: var(--color-success-background);
+      border-radius: .5rem;
+    }
+  }
+}
