--- a/src/app/pages/welcome/components/dashboard/quiz-list-table/quiz-list-table.component.html
+++ b/src/app/pages/welcome/components/dashboard/quiz-list-table/quiz-list-table.component.html
@@ -15,7 +15,7 @@
     <td mat-cell *matCellDef="let element">
       <a [routerLink]="'/quiz/'+element.id"><mat-icon class="action-icon">edit</mat-icon></a>
       @if (element._links?.start) {
-        <mat-icon (click)="startQuiz(element._links.start)" class="action-icon">play_circle</mat-icon>
+        <mat-icon (click)="onStartQuiz(element._links.start)" class="action-icon">play_circle</mat-icon>
       }
     </td>
   </ng-container>
