feat: implement start of using WS on host side

--- a/src/app/pages/host-quiz/host-quiz-page.component.html
+++ b/src/app/pages/host-quiz/host-quiz-page.component.html
@@ -1,1 +1,20 @@
-<p>play-quiz-page works!</p>
+<div class="quiz-host">
+  <h2> Hosting quiz : @if (quiz) {
+    {{quiz.title}}
+  }</h2>
+
+  <div class="quiz-host__share">
+    Share the fun with code: <em>{{id}}</em>
+  </div>
+
+  <div class="quiz-host__status">
+    @if (currentStatus) {
+      <div> Status: {{currentStatus.status}}</div>
+      <div> Participants: {{currentStatus.participants}}</div>
+    } @else {
+      <div class="alert"> Status: Unknown</div>
+    }
+
+  </div>
+</div>
+
