feat: implement new question
Implements #17

--- a/src/app/pages/host-quiz/host-quiz-page.component.html
+++ b/src/app/pages/host-quiz/host-quiz-page.component.html
@@ -16,5 +16,9 @@
     }
 
   </div>
+
+  <div class="quiz-host-start">
+    <button mat-raised-button color="primary" (click)="nextQuestion()">Next question</button>
+  </div>
 </div>
 
