--- a/src/app/pages/join-quiz/join-quiz-page.component.html
+++ b/src/app/pages/join-quiz/join-quiz-page.component.html
@@ -4,8 +4,28 @@
   }
 
   @if(status$ | async; as status) {
-    <div class="join-quiz__status">Current number of participants: {{status.participants}}</div>
-    <div class="info">Currently waiting for host to start quiz!</div>
+    @switch (status.status) {
+      @case ('waiting') {
+        <div class="join-quiz__status">Current number of participants: {{status.participants}}</div>
+        <div class="info">Currently waiting for host to start quiz!</div>
+      }
+      @case ('started') {
+        <div class="join-quiz__status">Current number of participants: {{status.participants}}</div>
+        <div class="info">Quiz has started!</div>
+
+        @if (question$ | async; as question) {
+        <div class="question">
+          <div class="question__title">{{question.question}}</div>
+          <div class="question__answers">
+          @for(answer of question.answers; track $index) {
+                <div class="question__answer">{{answer}}</div>
+          }
+          </div>
+        </div>
+        }
+      }
+    }
+
   } @else {
     <div class="join-quiz__status alert">Currently fetching status</div>
   }
