fix: get quiz from url when editing

--- a/src/app/pages/quiz-edit/components/quiz-form/quiz-form.component.html
+++ b/src/app/pages/quiz-edit/components/quiz-form/quiz-form.component.html
@@ -3,5 +3,5 @@
     <input matInput [value]="quiz.title" (change)="updateTitle($event)" />
   </mat-form-field>
 
-  <qzy-quiz-form-questions [questions]="quiz.questions" [quizId]="quiz.id"></qzy-quiz-form-questions>
+  <qzy-quiz-form-questions [questions]="quiz.questions" [quizId]="quizId"></qzy-quiz-form-questions>
 </div>
