--- a/src/app/pages/quiz-edit/quiz-edit-page.component.html
+++ b/src/app/pages/quiz-edit/quiz-edit-page.component.html
@@ -1,7 +1,7 @@
 <div class="quiz-edit">
 @if( quiz$ | async; as quizData ) {
   @if (quizData.status === 'OK' && quizData.data) {
-    <qzy-quiz-form [quiz]="quizData.data"></qzy-quiz-form>
+    <qzy-quiz-form [quiz]="quizData.data" [quizId]="id"></qzy-quiz-form>
   } @else if (quizData.status === 'NOT FOUND') {
     <div class="alert alert-danger" role="alert">
       {{ 'quizEditPage.notFound' | translate }}
